@@ -10,15 +10,23 @@ import static com.hartwig.hmftools.lilac.LilacConstants.MAX_LOW_BASE_PERC;
 import static com.hartwig.hmftools.lilac.LilacConstants.SPLICE_VARIANT_BUFFER;
 import static com.hartwig.hmftools.lilac.LilacUtils.belowMinQual;
 import static com.hartwig.hmftools.lilac.ReferenceData.GENE_CACHE;
-import static com.hartwig.hmftools.lilac.ReferenceData.STOP_LOSS_ON_C_INDEL;
 import static com.hartwig.hmftools.lilac.ReferenceData.INDEL_PON;
+import static com.hartwig.hmftools.lilac.ReferenceData.STOP_LOSS_ON_C_INDEL;
 import static com.hartwig.hmftools.lilac.fragment.FragmentUtils.mergeFragments;
+
+import java.io.File;
+import java.util.Collection;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 import com.google.common.collect.Lists;
 import com.google.common.collect.Maps;
 import com.google.common.collect.Sets;
-import com.hartwig.hmftools.common.gene.TranscriptData;
 import com.hartwig.hmftools.common.bam.BamSlicer;
+import com.hartwig.hmftools.common.gene.TranscriptData;
 import com.hartwig.hmftools.common.region.BaseRegion;
 import com.hartwig.hmftools.common.region.ChrBaseRegion;
 import com.hartwig.hmftools.common.variant.CodingEffect;
@@ -26,21 +34,16 @@ import com.hartwig.hmftools.lilac.LilacConfig;
 import com.hartwig.hmftools.lilac.fragment.Fragment;
 import com.hartwig.hmftools.lilac.fragment.FragmentUtils;
 import com.hartwig.hmftools.lilac.fragment.NucleotideFragmentFactory;
+import com.hartwig.hmftools.lilac.hla.HlaGene;
 import com.hartwig.hmftools.lilac.variant.SomaticVariant;
 
 import htsjdk.samtools.SAMRecord;
 import htsjdk.samtools.SamReader;
 import htsjdk.samtools.SamReaderFactory;
 
-import java.io.File;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
-import java.util.stream.Collectors;
-
 public class BamRecordReader implements BamReader
 {
-    private final Map<String,GeneCodingRegions> mGeneCodingRegions;
+    private final Map<HlaGene, GeneCodingRegions> mGeneCodingRegions;
 
     private final String mBamFile;
     private final SamReader mSamReader;
@@ -48,16 +51,16 @@ public class BamRecordReader implements BamReader
     private final BamSlicer mBamSlicer;
     private final NucleotideFragmentFactory mFragmentFactory;
 
-    private final Map<Indel,List<Fragment>> mKnownStopLossFragments;
-    private final Map<Indel,Integer> mUnmatchedIndels;
-    private final Map<Indel,Integer> mUnmatchedPONIndels;
+    private final Map<Indel, List<Fragment>> mKnownStopLossFragments;
+    private final Map<Indel, Integer> mUnmatchedIndels;
+    private final Map<Indel, Integer> mUnmatchedPONIndels;
     private final Set<String> mDiscardIndelReadIds;
     private int mFilteredRecordCount;
 
-    public static final int MAX_DISTANCE = 1000;
+    private static final int MAX_DISTANCE = 1000;
 
-    public BamRecordReader(
-            final String bamFile, final LilacConfig config, final Map<String,TranscriptData> transcripts, final NucleotideFragmentFactory factory)
+    public BamRecordReader(final String bamFile, final LilacConfig config, final Map<HlaGene, TranscriptData> transcripts,
+            final NucleotideFragmentFactory factory)
     {
         mBamFile = bamFile;
 
@@ -70,7 +73,7 @@ public class BamRecordReader implements BamReader
 
         mGeneCodingRegions = Maps.newHashMap();
 
-        for(String geneName : GENE_CACHE.GeneNames)
+        for(HlaGene geneName : GENE_CACHE.GeneNames)
         {
             TranscriptData transcriptData = transcripts.get(geneName);
             mGeneCodingRegions.put(geneName, new GeneCodingRegions(geneName, HLA_CHR, transcriptData));
@@ -87,22 +90,24 @@ public class BamRecordReader implements BamReader
 
     public int filteredReadCount() { return mFilteredRecordCount; }
 
-    public Map<Indel,List<Fragment>> getKnownStopLossFragments() { return mKnownStopLossFragments; }
+    public Map<Indel, List<Fragment>> getKnownStopLossFragments() { return mKnownStopLossFragments; }
 
-    public Map<Indel,Integer> unmatchedIndels(int minCount)
+    public Map<Indel, Integer> unmatchedIndels(int minCount)
     {
-        Map<Indel,Integer> filteredMap = Maps.newHashMap();
+        Map<Indel, Integer> filteredMap = Maps.newHashMap();
         mUnmatchedIndels.entrySet().stream()
-                .filter(x -> x.getValue()>= minCount)
+                .filter(x -> x.getValue() >= minCount)
                 .filter(x -> !x.getKey().equals(STOP_LOSS_ON_C_INDEL))
                 .forEach(x -> filteredMap.put(x.getKey(), x.getValue()));
         return filteredMap;
     }
 
-    public Map<Indel,Integer> unmatchedPonIndels(int minCount)
+    public Map<Indel, Integer> unmatchedPonIndels(int minCount)
     {
-        Map<Indel,Integer> filteredMap = Maps.newHashMap();
-        mUnmatchedPONIndels.entrySet().stream().filter(x -> x.getValue()>= minCount).forEach(x -> filteredMap.put(x.getKey(), x.getValue()));
+        Map<Indel, Integer> filteredMap = Maps.newHashMap();
+        mUnmatchedPONIndels.entrySet().stream()
+                .filter(x -> x.getValue() >= minCount)
+                .forEach(x -> filteredMap.put(x.getKey(), x.getValue()));
         return filteredMap;
     }
 
@@ -110,7 +115,7 @@ public class BamRecordReader implements BamReader
     {
         final List<Fragment> fragments = Lists.newArrayList();
 
-        for(String geneName : GENE_CACHE.GeneNames)
+        for(HlaGene geneName : GENE_CACHE.GeneNames)
         {
             GeneCodingRegions geneCodingRegions = mGeneCodingRegions.get(geneName);
 
@@ -122,10 +127,11 @@ public class BamRecordReader implements BamReader
 
     private List<Fragment> findGeneFragments(final GeneCodingRegions geneCodingRegions)
     {
-        LL_LOGGER.trace("querying HLA gene({})", geneCodingRegions.GeneName);
+        LL_LOGGER.trace("querying gene({})", geneCodingRegions.GeneName.toString());
 
         // slice for the whole coding region rather than per exon
-        ChrBaseRegion sliceRegion = new ChrBaseRegion(geneCodingRegions.Chromosome, geneCodingRegions.CodingStart, geneCodingRegions.CodingEnd);
+        ChrBaseRegion sliceRegion = new ChrBaseRegion(
+		geneCodingRegions.Chromosome, geneCodingRegions.CodingStart, geneCodingRegions.CodingEnd);
         List<SAMRecord> records = mBamSlicer.slice(mSamReader, sliceRegion);
 
         List<Read> reads = Lists.newArrayList();
@@ -137,7 +143,7 @@ public class BamRecordReader implements BamReader
 
             List<BaseRegion> codingExonOverlaps = geneCodingRegions.CodingRegions.stream()
                     .filter(x -> positionsOverlap(x.start(), x.end(), record.getAlignmentStart(), record.getAlignmentEnd()))
-                    .collect(Collectors.toList());
+                    .toList();
 
             // read must overlap an exon to even be considered
             if(codingExonOverlaps.isEmpty())
@@ -147,7 +153,7 @@ public class BamRecordReader implements BamReader
             {
                 LL_LOGGER.trace("filter read: id({}) coords({}-{}) cigar({}) from gene region({}:{}-{})",
                         record.getReadName(), record.getAlignmentStart(), record.getAlignmentEnd(), record.getCigarString(),
-                        geneCodingRegions.GeneName, geneCodingRegions.CodingStart, geneCodingRegions.CodingEnd);
+                        geneCodingRegions.GeneName.toString(), geneCodingRegions.CodingStart, geneCodingRegions.CodingEnd);
 
                 ++mFilteredRecordCount;
             }
@@ -157,7 +163,7 @@ public class BamRecordReader implements BamReader
             }
         }
 
-        Map<String,Fragment> readIdFragments = createFragments(geneCodingRegions.GeneName, geneCodingRegions.Strand, reads);
+        Map<String, Fragment> readIdFragments = createFragments(geneCodingRegions.GeneName, geneCodingRegions.Strand, reads);
 
         List<Fragment> readFragments = readIdFragments.values().stream()
                 .filter(x -> !mDiscardIndelReadIds.contains(x.id()))
@@ -170,7 +176,7 @@ public class BamRecordReader implements BamReader
     {
         // filter any read with 50% + bases classified as low qual or any invalid base
         int baseLength = read.getReadBases().length;
-        int qualCountThreshold = (int)floor(baseLength * MAX_LOW_BASE_PERC) + 1;
+        int qualCountThreshold = (int) floor(baseLength * MAX_LOW_BASE_PERC) + 1;
         int lowQualCount = 0;
 
         for(int i = 0; i < baseLength; ++i)
@@ -194,9 +200,9 @@ public class BamRecordReader implements BamReader
         return false;
     }
 
-    private Map<String,Fragment> createFragments(final String geneName, final byte geneStrand, final List<Read> codingRecords)
+    private Map<String, Fragment> createFragments(final HlaGene geneName, final byte geneStrand, final Iterable<Read> codingRecords)
     {
-        Map<String,Fragment> readIdFragments = Maps.newHashMap();
+        Map<String, Fragment> readIdFragments = Maps.newHashMap();
 
         for(Read read : codingRecords)
         {
@@ -273,10 +279,9 @@ public class BamRecordReader implements BamReader
         indelFrags.add(fragment);
     }
 
-    private static void incrementIndelCounter(final Map<Indel,Integer> indelMap, final Indel indel)
+    private static void incrementIndelCounter(final Map<Indel, Integer> indelMap, final Indel indel)
     {
-        Integer count = indelMap.get(indel);
-        indelMap.put(indel, count != null ? count + 1 : 1);
+        indelMap.merge(indel, 1, Integer::sum);
     }
 
     private boolean bothEndsInRangeOfCodingTranscripts(final SAMRecord record)
@@ -300,7 +305,7 @@ public class BamRecordReader implements BamReader
         // slice the BAM for the variant, get the mates if they are within the same gene's coding region,
         // then create and filter fragments
 
-        for(String geneName : GENE_CACHE.GeneNames)
+        for(HlaGene geneName : GENE_CACHE.GeneNames)
         {
             GeneCodingRegions geneCodingRegions = mGeneCodingRegions.get(geneName);
 
@@ -326,7 +331,7 @@ public class BamRecordReader implements BamReader
 
                 final List<Fragment> readFragments = codingRecords.stream()
                         .map(x -> mFragmentFactory.createAlignmentFragments(x, geneName, geneCodingRegions.Strand))
-                        .filter(x -> x != null)
+                        .filter(Objects::nonNull)
                         .collect(Collectors.toList());
 
                 List<Fragment> mateFragments = queryMateFragments(geneCodingRegions, codingRecords);
@@ -340,9 +345,9 @@ public class BamRecordReader implements BamReader
         return Lists.newArrayList();
     }
 
-    private List<Fragment> queryMateFragments(GeneCodingRegions geneCodingRegions, final List<Read> codingRecords)
+    private List<Fragment> queryMateFragments(final GeneCodingRegions geneCodingRegions, final Collection<Read> codingRecords)
     {
-        List<SAMRecord> records = codingRecords.stream().map(x -> x.bamRecord()).collect(Collectors.toList());
+        List<SAMRecord> records = codingRecords.stream().map(Read::bamRecord).collect(Collectors.toList());
         List<SAMRecord> mateRecords = mBamSlicer.queryMates(mSamReader, records);
 
         List<Fragment> fragments = Lists.newArrayList();
@@ -359,7 +364,8 @@ public class BamRecordReader implements BamReader
 
             Read codingRecord = Read.createRead(matchedCodingRegion, record, true, true);
 
-            Fragment fragment = mFragmentFactory.createAlignmentFragments(codingRecord, geneCodingRegions.GeneName, geneCodingRegions.Strand);
+            Fragment fragment = mFragmentFactory.createAlignmentFragments(
+		    codingRecord, geneCodingRegions.GeneName, geneCodingRegions.Strand);
 
             if(fragment != null)
                 fragments.add(fragment);
